--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,11 @@
     "dev": "nodemon index",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
-    "migrations:revert": "sequelieze-cli db:migrate:undo"
+    "migrations:revert": "sequelieze-cli db:migrate:undo",
+    "seeders:generate": "npx sequelize-cli seed:generate --name",
+    "seeders:run": "npx sequelize-cli db:seed:all",
+    "seeders:revert": "npx sequelize-cli db:seed:undo"
+
   },
   "keywords": [],
   "author": "",
