--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,17 @@
     "migrations:revert": "sequelieze-cli db:migrate:undo",
     "seeders:generate": "npx sequelize-cli seed:generate --name",
     "seeders:run": "npx sequelize-cli db:seed:all",
-    "seeders:revert": "npx sequelize-cli db:seed:undo"
+    "seeders:revert": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
     "swagger-jsdoc": "^6.1.0",
